--- a/app/views/rrhh/agenteAsistenciaLicencia/indexLicenciaNovedadesLiquidacion.scala.html
+++ b/app/views/rrhh/agenteAsistenciaLicencia/indexLicenciaNovedadesLiquidacion.scala.html
@@ -17,6 +17,8 @@
 			classEstado = "ordenPrecurso"
 		}else if(i.estado != null && i.estado.id == 119){
 			classEstado = "autorizado"
+		}else if(i.estado != null && i.estado.id == 124){
+			classEstado = "red"
 		}else{
 			classEstado = "borrador"
 		}
@@ -91,9 +93,13 @@
 
 		<div class="row" >
 
-			<div class="col-sm-3 filtrosEstados" id="filtrosEstados">
+			<div class="col-sm-4 filtrosEstados" id="filtrosEstados">
 				<div class="btn-group">
-					<button type="button" rel="borrador" class="btn btn-default btn-filtros">
+				  <button type="button" rel="eliminador" class="btn btn-default btn-filtros">
+				  	<i class="glyphicon glyphicon-remove-sign size-14 red" style="color:red;"></i><br>Eliminado
+				  	@checkbox(formBuscador("btnFiltro[4]"), 'hidden -> "hidden")
+				  </button>
+				  <button type="button" rel="arevisar" class="btn btn-default btn-filtros">
 				  	<i class="glyphicon glyphicon-question-sign size-14"></i><br>A Revisar
 				  	@checkbox(formBuscador("btnFiltro[3]"), 'hidden -> "hidden")
 				  </button>
@@ -161,7 +167,15 @@
 				@select(formBuscador("ejercicio"), Ejercicio.getEjercicios().map { p => p.id.toString -> p.nombre}, 'class -> "form-control select", '_default -> "Seleccionar")
 				</label>
 			</div>
+			<div class="col-sm-2">
+				<label class="control-label">
+					Residente
+					@select(formBuscador("residente"),options(""->"","SI"->"SI","NO"->"NO"), 'class -> "form-control select")
+				</label>
+			</div>
+		</div>
 
+		<div class="row" >
 			<div class="col-sm-2">
 				<div class="form-group">
 					<label for="nombre" class="control-label">Nombre
@@ -170,9 +184,6 @@
 				</div>
 			</div>
 
-
-		</div>
-		<div class="row" >
 			<div class="col-sm-2">
 				<div class="form-group">
 					<label for="cuit" class="control-label">Cuit
@@ -259,6 +270,7 @@
 					<th>Fin</th>
 					<th>Organigrama</th>
 					<th>Tipo Relacion</th>
+					<th>Residente</th>
 					<th>Estado</th>
 
 				</tr>
@@ -289,6 +301,7 @@
 				    	case _ => {}
 						}
 					</td>
+					<td>@if(linea.agenteAsistenciaLicencia.agente.tipo_residencia_id != null){SI}else{NO}</td>
 					<td>@if(linea.estado_id != null){@linea.estado.nombre}</td>
 
 				</tr>
