--- a/app/views/haberes/controlHaberes/controlGuardiasPorAgentePorPeriodo.scala.html
+++ b/app/views/haberes/controlHaberes/controlGuardiasPorAgentePorPeriodo.scala.html
@@ -2,14 +2,14 @@
 @import helper._
 @import utils._
 @import models.auth._
-@import java.math.BigDecimal;var diferencia=new java.math.BigDecimal(0);
+
 @implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
 @scripts = {
 	<script src="@routes.Assets.at("javascripts/haberes/liquidacionMes.js")" type="text/javascript"></script>
 }
 
-@import java.math.BigDecimal;var total=new java.math.BigDecimal(0);
+@import java.math.BigDecimal;var total=new java.math.BigDecimal(0);var diferencia =new java.math.BigDecimal(0);
 @views.html.haberes.mainHaberes("Control Guardias", scripts) {
 <div class="page-header">
 	<div class="row">
@@ -125,7 +125,7 @@
 						@if(s.size() > 0){
 							@for(sx <- s) {
 
-								@{diferencia = sx.getBigDecimal("total").subtract(sx.getBigDecimal("limite_guardia"))}
+								@{diferencia = sx.getBigDecimal("limite_guardia").subtract(sx.getBigDecimal("total"))}
 
 								@if(diferencia.compareTo(java.math.BigDecimal.ZERO) < 0){
 									<tr style="color:red;" >
