--- a/app/views/recupero/recuperoFactura/verRecuperoFactura.scala.html
+++ b/app/views/recupero/recuperoFactura/verRecuperoFactura.scala.html
@@ -1,10 +1,12 @@
 @(recuperoFacturaForm: Form[models.recupero.RecuperoFactura], recuperoFactura: models.recupero.RecuperoFactura)
 @import utils._
 @import helper._
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
+@scripts = {
+	<script src="@routes.Assets.at("javascripts/recupero/recuperoFactura.js")" type="text/javascript"></script>
+}
 
-
-@views.html.recupero.mainRecupero("Vista de factura") {
+@views.html.recupero.mainRecupero("Vista de factura", scripts) {
 	<div class="page-header">
 		<div class="row">
 			<div class="col-sm-7">
@@ -18,10 +20,14 @@
 				    <span class="caret"></span>
 				  </button>
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-					<li role="presentation"><a role="menuitem" tabindex="-1" href="@controllers.recupero.routes.RecuperoReportesController.imprimirFactura(recuperoFactura.id)">Imprimir factura</a></li>
+					<li role="presentation">
+						<a role="menuitem" id="imprimirFacturaAfip" tabindex="-1" data-url="@controllers.recupero.routes.RecuperoReportesController.imprimirFacturaAfip(recuperoFactura.id)">Imprimir factura AFIP</a>
+
+						<a role="menuitem" tabindex="-1" href="@controllers.recupero.routes.RecuperoReportesController.imprimirFactura(recuperoFactura.id)">Imprimir factura</a>
+					</li>
 				  </ul>
 				</div>
-				
+
 				<div class="dropdown pull-right btn-header">
 				 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
 				 	<i class="glyphicon glyphicon-cog"></i>
@@ -29,14 +35,14 @@
 				    <span class="caret"></span>
 				  </button>
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-				  	
+
 				  </ul>
 				</div>
 
 			</div>
 		</div>
 	</div>
-	
+
 @views.html.tags.successError()
 
 <div class="row menu-acciones">
@@ -55,19 +61,24 @@
 			<label class="control-label">Nombre</label>
 			<p class="form-control-static form-control">@recuperoFactura.nombre</p>
 		</div>
+		<div class="col-sm-2">
+
+			<label class="control-label">Tipo Pago</label>
+			<p class="form-control-static form-control">@if(recuperoFactura.recuperoTipoPago != null){@recuperoFactura.recuperoTipoPago.nombre}</p>
+		</div>
 		<div class="col-sm-3">
 			<label class="control-label">Numero</label>
 			<p class="form-control-static form-control">@recuperoFactura.getNumeroFactura()</p>
 		</div>
-		 
+
 		<div class="col-sm-4">
-			<label class="control-label">Cliente</label> 
+			<label class="control-label">Cliente</label>
 			<p class="form-control-static form-control" style="height: 25px; overflow: hidden;">
 				@recuperoFacturaForm("cliente.nombre").value
 			</p>
 		</div>
-	</div>	
-	<div class="row">	
+	</div>
+	<div class="row">
 		<div class="col-sm-2">
 			<label class="control-label">Planilla</label>
 			<p class="form-control-static form-control">
@@ -75,30 +86,30 @@
 				@recuperoFactura.planilla.getRecuperoPlanillaEjercicio()
 			}
 			</p>
-		</div>	
+		</div>
 		<div class="col-sm-2">
 			<label class="control-label">Fecha factura</label>
 			<p class="form-control-static form-control">@recuperoFacturaForm("fecha").value</p>
 		</div>
 	</div>
-		
+
 	@views.html.recupero.recuperoFactura.tabsRecuperoFactura(false, recuperoFacturaForm,recuperoFactura)
-	<!-- <h4>Total: 	   <b>@utils.NumberUtils.moneda(recuperoFactura.getBase())</b></h4>	
+	<!-- <h4>Total: 	   <b>@utils.NumberUtils.moneda(recuperoFactura.getBase())</b></h4>
 	<h4>Estado actual: 	<b>@recuperoFactura.estado.nombre</b></h4>-->
-	 
-	<div class="row">	
-	
-		@for(estado <- models.Estado.getSiguienteEstadoPorAprobar(recuperoFactura.estado.orden,models.Estado.TIPO_RECUPERO_FACTURA)) {	
+
+	<div class="row">
+
+		@for(estado <- models.Estado.getSiguienteEstadoPorAprobar(recuperoFactura.estado.orden,models.Estado.TIPO_RECUPERO_FACTURA)) {
 			@if(estado.orden <= 4) {
 				<div class="col-sm-3">
 					<a href="@controllers.recupero.routes.RecuperoFacturasController.cambiarEstado(recuperoFacturaForm.field("id").value.toInt, estado.id.toLong)@UriTrack.get("&")" class="btn btn-default">
 						<i class="glyphicon glyphicon-arrow-right"></i> @estado.nombre
 					</a>
 				</div>
-				
+
 			}
-		} 
-		
+		}
+
 		@if(recuperoFactura.estado.id == models.Estado.RECUPERO_FACTURA_CANCELADO) {
 			<div class="col-sm-3">
 				<a href="@controllers.recupero.routes.RecuperoFacturasController.cambiarEstado(recuperoFacturaForm.field("id").value.toInt, models.Estado.RECUPERO_FACTURA_BORRADOR)@UriTrack.get("&")" class="btn btn-default">
