--- a/app/views/recupero/recuperoRecibo/formRecibo.scala.html
+++ b/app/views/recupero/recuperoRecibo/formRecibo.scala.html
@@ -1,4 +1,63 @@
-@(planillaForm: Form[models.recupero.RecuperoRecibo])
+@(recuperoReciboForm: Form[models.recupero.RecuperoRecibo],rp:models.recupero.RecuperoRecibo)
 @import helper._
 @import utils._
 @implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
+
+	<div class="row menu-acciones">
+		<div class="col-sm-10">
+			<button type="submit" class="btn btn-default" title="Guardar pago"><i class="glyphicon glyphicon-floppy-disk"></i> Guardar</button>
+
+	    	<a href="@if(request().getHeader("referer")){ @request().getHeader("referer") } else {@controllers.recupero.routes.RecuperoRecibosController.index()@UriTrack.decode()}" title="Cancelar editar" class="btn btn-default"><i class="glyphicon glyphicon-floppy-remove"></i> Cancelar</a>
+	    </div>
+		<div class="col-sm-2">
+			<a href="@UriTrack.decode()" title="Volver al listado" class="btn btn-default"><i class="glyphicon glyphicon-list"></i></a>
+			@if(recuperoReciboForm.field("id").value){<a href="@controllers.recupero.routes.RecuperoRecibosController.ver(recuperoReciboForm.field("id").value.toLong)@UriTrack.get("&")" title="Ver Recibo" class="btn btn-default"><i class="glyphicon glyphicon-align-justify"></i></a>}
+		</div>
+	</div>
+
+	@inputText(recuperoReciboForm("id"), 'type -> "hidden", 'id -> "recuperoReciboId")
+	<input type="hidden" name=@UriTrack.getKey() value="@UriTrack.code()" />
+
+	<div class="row">
+		<div class="col-sm-4">
+			<label class="control-label">Numero</label>
+			<div class="input-group @if(recuperoReciboForm.error("nombre") != null) {has-error}else{has-required}">
+				<span class="input-group-btn">
+			      @select(recuperoReciboForm("puntoventa_id"),PuntoVenta.find.all().map { p => p.id.toString -> p.numero},
+					'class -> "form-control select", '_default -> "Seleccionar")
+			      <i class="input-group-addon" style="display:none"></i>
+			    </span>
+			    <span class="input-group-btn">
+					@inputText(recuperoReciboForm("numero"), 'class -> "form-control",'id -> "numero")
+				</span>
+
+			</div>
+				@recuperoReciboForm("numero").error.map{ error =>
+					<div class="text-error">@error.message</div>
+				}
+				@recuperoReciboForm("puntoventa_id").error.map{ error =>
+					<div class="text-error">@error.message</div>
+				}
+		</div>
+
+
+
+
+
+
+		<div class="col-sm-2">
+			<label class="control-label">Fecha</label>
+			<div class="form-group @if(recuperoReciboForm.error("fecha")  != null) {has-error}else{has-required}">
+				@inputText(recuperoReciboForm("fecha"),'class -> "form-control date", 'autocomplete -> "off")
+			</div>
+			@recuperoReciboForm("fecha").error.map{ error =>
+				<div class="text-error">@error.message</div>
+			}
+		</div>
+	</div>
+
+	<script>
+	$( function() {
+		$("#numero").mask("99999999");
+	});
+</script>
