--- a/app/views/haberes/controlHaberes/controlGuardiasPorAgentePorPeriodo.scala.html
+++ b/app/views/haberes/controlHaberes/controlGuardiasPorAgentePorPeriodo.scala.html
@@ -94,7 +94,7 @@
 				<div class="col-sm-2">
 					<div class="form-group">
 					<label for="nombre" class="control-label">&nbsp;</label>
-					<a href="@controllers.compras.routes.SolicitudesController.index()"  class="form-control btn btn-default">Limpiar</a>
+					<a href="@controllers.haberes.routes.ControlHaberes.controlGuardiasPorAgentePorPeriodo()"  class="form-control btn btn-default">Limpiar</a>
 					</div>
 				</div>
 
