--- a/app/views/recupero/recuperoNotaDebito/formLineaNotaDebito.scala.html
+++ b/app/views/recupero/recuperoNotaDebito/formLineaNotaDebito.scala.html
@@ -15,6 +15,7 @@ $(function(){
 	$("#cantidad").numeric_input();
 	$("#precio").numeric_input({allowNegative: true});
 	$("#fecha_nc").mask("99/99/9999");
+	$("#numero_nc").mask("99999999");
 });
 
 </script>
