--- a/app/views/recupero/recuperoNotaCredito/formLineaNotaCredito.scala.html
+++ b/app/views/recupero/recuperoNotaCredito/formLineaNotaCredito.scala.html
@@ -1,6 +1,6 @@
 @(lineaForm: Form[models.recupero.RecuperoNotaCredito])
 @import helper._
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
 <script src="@routes.Assets.at("plugins/jquery.numeric_input.min.js")" type="text/javascript"></script>
 
@@ -22,16 +22,16 @@ $(function(){
  <div class="row">
 	@inputText(lineaForm("recupero_factura_id"), 'type -> "hidden")
 	<div class="col-sm-3">
-	 	<label class="control-label">Numero</label> 
+	 	<label class="control-label">Numero</label>
 		<div class="input-group @if(lineaForm.error("numero") != null) {has-error}else{has-required}">
 		    <span class="input-group-btn">
 		    <i class="input-group-addon" style="display:none"></i>
 		      @inputText(lineaForm("numero"), 'class -> "form-control",'id->"numero_nc")
 		    </span>
-	  	</div>	
+	  	</div>
 	</div>
 	<div class="col-sm-2">
-		<label class="control-label">Fecha</label> 
+		<label class="control-label">Fecha</label>
 		<div class="form-group @if(lineaForm.error("fecha")  != null) {has-error}else{has-required}">
 			@inputText(lineaForm("fecha"),'class -> "form-control date", 'autocomplete -> "off",'id->"fecha_nc")
 		</div>
@@ -45,13 +45,13 @@ $(function(){
 			@inputText(lineaForm("producto.nombre"), 'class -> "form-control", 'autofocus -> "autofocus", 'id -> "producto_modal")
 			@inputText(lineaForm("producto_id"), 'hidden -> "hidden", 'id -> "producto_id_modal")
 			<span class="input-group-addon">
-				<a href="#" id="searchProductoModal" 
-							data-title="Selección de producto" 
-							data-url="@controllers.compras.routes.ProductosController.modalBuscarIps()" 
-							data-height="650" 
-							data-width="700" 
-							data-listen="modal.seleccion.producto.simple" 
-							data-label="#producto_modal" 
+				<a href="#" id="searchProductoModal"
+							data-title="Selección de producto"
+							data-url="@controllers.compras.routes.ProductosController.modalBuscarIps()"
+							data-height="650"
+							data-width="700"
+							data-listen="modal.seleccion.producto.simple"
+							data-label="#producto_modal"
 							data-field="#producto_id_modal">
 							<i class="glyphicon glyphicon-search"></i>
 				</a>
@@ -61,8 +61,8 @@ $(function(){
 			<div class="text-error">@error.message</div>
 		}
 	</div>
-	
-	
+
+
 </div>
 
 <div class="row">
@@ -73,7 +73,7 @@ $(function(){
 			@lineaForm("precio").error.map{ error => <div class="text-error">@error.message</div>}
 		</div>
 	</div>
-		
+
 	<div class="col-sm-2">
 		<label for="cantidad" class="control-label">Cantidad</label>
 		<div class="form-group @if(lineaForm.error("cantidad") != null) {has-error} else {has-required}">
@@ -89,21 +89,21 @@ $(function(){
 		</div>
 	</div>
 	<div class="col-sm-2">
-		<label for="planilla" class="control-label">Planilla</label> 
+		<label for="planilla" class="control-label">Planilla</label>
 		<div class="input-group @if(lineaForm.error("planilla_id") != null) {has-error}else{has-required}">
 			@inputText(lineaForm("planilla.recuperoPlanillaEjercicio"),'class -> "form-control", 'id -> "planilla")
 			@inputText(lineaForm("planilla_id"),'hidden -> "hidden", 'id -> "planilla_id")
 
 			<span class="input-group-addon">
-			<a href="#" 
-			id="searchPlanilla" data-title="Selección de Planilla" 
-			data-url="@controllers.recupero.routes.RecuperoPlanillasController.modalBuscar()" 
-			data-height="650" data-width="700" 
-			data-listen="modal.seleccion.planilla.simple" 
-			data-label="#planilla" 
+			<a href="#"
+			id="searchPlanilla" data-title="Selección de Planilla"
+			data-url="@controllers.recupero.routes.RecuperoPlanillasController.modalBuscar()"
+			data-height="650" data-width="700"
+			data-listen="modal.seleccion.planilla.simple"
+			data-label="#planilla"
 			data-field="#planilla_id">
 			<i class="glyphicon glyphicon-search"></i></a></span>
-			
+
 		</div>
 		@lineaForm("planilla_id").error.map{ error =>
 				<div class="text-error">@error.message</div>
@@ -117,9 +117,14 @@ $(function(){
       <button type="submit" class="btn btn-default" title="Guardar Linea"><i class="glyphicon glyphicon-floppy-disk"></i> Guardar</button>
     </div>
 </div>
-	
+
 <script>
 $( function(){
+	<script>
+
+		$("#numero_nc").mask("99999999");
+
+
 	if($("#planilla").length){
 		var options = {
 				script:"/recupero/suggestRecuperoPlanilla/",
@@ -127,8 +132,8 @@ $( function(){
 				json:true,
 				shownoresults:true,
 				maxresults:6,
-				callback: function (obj) { 		
-											$("#planilla_id").val(obj.id); 
+				callback: function (obj) {
+											$("#planilla_id").val(obj.id);
 										 }
 			};
 		var as_json = new bsn.AutoSuggest('planilla', options);
@@ -140,12 +145,11 @@ $( function(){
 				json:true,
 				shownoresults:true,
 				maxresults:6,
-				callback: function (obj) { 
-											$("#producto_id_modal").val(obj.id); 
+				callback: function (obj) {
+											$("#producto_id_modal").val(obj.id);
 										 }
 			};
 		var as_json = new bsn.AutoSuggest('producto_modal', options);
 	}
 })
-</script>	
-	
+</script>
