--- a/app/views/recupero/recuperoRecibo/recuperoReciboFactura/indexRecuperoReciboFactura.scala.html
+++ b/app/views/recupero/recuperoRecibo/recuperoReciboFactura/indexRecuperoReciboFactura.scala.html
@@ -24,8 +24,9 @@
 						<th width="70">Fecha</th>
 						<th width="400">Cliente</th>
 						<th width="200">N° Factura</th>
-
+						<th width="95">Monto Factura</th>
 						<th width="95">Monto</th>
+						<th width="95">Saldo</th>
 
 						 @if(editable){
 						<th width="30">#</th>
