--- a/app/views/recupero/recuperoRecibo/recuperoReciboFactura/lineaRecuperoReciboFactura.scala.html
+++ b/app/views/recupero/recuperoRecibo/recuperoReciboFactura/lineaRecuperoReciboFactura.scala.html
@@ -9,8 +9,9 @@
 	<td class="fechaRecuperoFactura">@if(linea.recuperoFactura.fecha != null){@(utils.DateUtils.formatDate(linea.recuperoFactura.fecha))}</td>
 	<td>@if(linea.recuperoFactura.cliente != null){@(linea.recuperoFactura.cliente.nombre)}</td>
 	<td>@if(linea.recuperoFactura.numero != null){@(linea.recuperoFactura.getNumeroFactura())}</td>
-
+	<td>@utils.NumberUtils.moneda(linea.recuperoFactura.getTotal(), 10)</td>
 	<td>@utils.NumberUtils.moneda(linea.monto, 10)</td>
+	<td>@utils.NumberUtils.moneda(linea.getSaldo(), 10)</td>
 	@if(editable){
 		<td><a class="btn btn-default btn-xs eliminarRecuperoReciboFactura delete-confirm-link" href="@controllers.recupero.routes.RecuperoReciboFacturasController.eliminar(linea.id)"><i class="glyphicon glyphicon-trash icono-eliminar"></i></a></td>
 	 }
