--- a/app/views/recupero/recuperoRecibo/recuperoReciboFactura/indexRecuperoReciboFactura.scala.html
+++ b/app/views/recupero/recuperoRecibo/recuperoReciboFactura/indexRecuperoReciboFactura.scala.html
@@ -1,4 +1,4 @@
-@(paginador:  utils.pagination.Pagination[models.recupero.RecuperoReciboFactura], editable: Boolean,rf:models.recupero.RecuperoReciboFactura)
+@(paginador:  utils.pagination.Pagination[models.recupero.RecuperoReciboFactura], editable: Boolean)
 <div id="listaReciboFactura" class="contenedorPaginador ajaxPaginador">
 
 <div class="panel panel-default">
