--- a/app/views/recupero/recuperoFactura/verRecuperoFactura.scala.html
+++ b/app/views/recupero/recuperoFactura/verRecuperoFactura.scala.html
@@ -21,7 +21,7 @@
 				  </button>
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
 					<li role="presentation">
-						<a role="menuitem" id="imprimirFacturaAfip" tabindex="-1" data-url="@controllers.recupero.routes.RecuperoReportesController.imprimirFacturaAfip(recuperoFactura.id)">Imprimir factura AFIP</a>
+						<a role="menuitem" id="imprimirFacturaAfip" tabindex="-1" href="#" data-url="@controllers.recupero.routes.RecuperoReportesController.imprimirFacturaAfip(recuperoFactura.id)">Imprimir factura AFIP</a>
 
 						<a role="menuitem" tabindex="-1" href="@controllers.recupero.routes.RecuperoReportesController.imprimirFactura(recuperoFactura.id)">Imprimir factura</a>
 					</li>
