--- a/app/views/recupero/recuperoRecibo/verRecibo.scala.html
+++ b/app/views/recupero/recuperoRecibo/verRecibo.scala.html
@@ -3,7 +3,7 @@
 @import helper._
 @implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 @scripts = {
-
+	<script src="@routes.Assets.at("javascripts/recupero/recuperoFactura.js")" type="text/javascript"></script>
 }
 
 
@@ -22,6 +22,8 @@
 				    <span class="caret"></span>
 				  </button>
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+				  	<li><a role="menuitem" id="imprimirReciboNuevo" tabindex="-1" href="#" data-url="@controllers.recupero.routes.RecuperoReportesController.imprimirReciboNuevo(recuperoRecibo.id)">
+											Imprimir Recibo</a></li>
 
 
 				  </ul>
