--- a/app/views/recupero/recuperoRecibo/verRecibo.scala.html
+++ b/app/views/recupero/recuperoRecibo/verRecibo.scala.html
@@ -82,7 +82,7 @@
 						<div class="row margin-bottom-25">
 							<div class="col-sm-12">
 
-								<h4>Total: 	<b></b></h4>
+								<h4>Total:@utils.NumberUtils.moneda(recuperoRecibo.getTotal(), 10) <b></b></h4>
 
 
 								<h4>Estado:
