--- a/app/views/recupero/recuperoRecibo/verRecibo.scala.html
+++ b/app/views/recupero/recuperoRecibo/verRecibo.scala.html
@@ -66,6 +66,11 @@
 			<p class="form-control-static form-control">@recuperoReciboForm("fecha").value</p>
 		</div>
 
+		<div class="col-sm-2">
+			<label class="control-label">Fecha Transferencia</label>
+			<p class="form-control-static form-control">@recuperoReciboForm("fecha_transferencia").value</p>
+		</div>
+
 	</div>
 
 
