--- a/app/views/recupero/recuperoRecibo/indexRecibo.scala.html
+++ b/app/views/recupero/recuperoRecibo/indexRecibo.scala.html
@@ -113,6 +113,7 @@
 
 					<th width="900">Numero</th>
 					<th width="70">Fecha</th>
+					<th width="70">Fecha Transf.</th>
 					<th width="70">Estado</th>
 
 					<th width="30">#</th>
@@ -127,6 +128,7 @@
 
 						<td>@(recibo.getNumeroRecibo())</td>
 						<td class="fecha">@if(recibo.fecha != null){@(utils.DateUtils.formatDate(recibo.fecha))}</td>
+						<td class="fecha">@if(recibo.fecha_transferencia != null){@(utils.DateUtils.formatDate(recibo.fecha_transferencia))}</td>
 						<td class="fecha">@if(recibo.estado != null){@(recibo.estado.nombre)}</td>
 
 						<td>
