--- a/app/views/recupero/recuperoNotaCredito/indexRecuperoNotaCredito.scala.html
+++ b/app/views/recupero/recuperoNotaCredito/indexRecuperoNotaCredito.scala.html
@@ -3,17 +3,19 @@
 
 <div class="panel panel-default">
 		<div class="panel-heading"><b>Notas de Creditos</b>
-		
-		 	 
+
+
 		@if(rf.estado_id == models.Estado.RECUPERO_FACTURA_APROBADO) {
-			<a class="btn btn-default btn-xs" href="#" id="nuevoNotaCredito"><i class="glyphicon glyphicon-plus"></i> Nuevo</a>	 	
-		}	 
+			@if(Permiso.check("recuperoNotasEditar")) {
+			<a class="btn btn-default btn-xs" href="#" id="nuevoNotaCredito"><i class="glyphicon glyphicon-plus"></i> Nuevo</a>
+			}
+		}
 		</div>
 		<div class="panel-body">
 			@if(paginador.getTotalRowCount == 0) {
         		<p id="mensajeSinResultados" class="well"><i class="glyphicon glyphicon-info-sign"></i> No hay Notas de creditos para esta factura.</p>
-    		} 
-			
+    		}
+
 			<table id="listaDeNotaCreditos" class="table table-striped table-bordered @if(paginador.getTotalRowCount() <= 0){hide}">
 				<thead>
 					<tr>
@@ -26,8 +28,8 @@
 						<th>Precio</th>
 						<th>Subtotal</th>
 							<th></th>
-						
-					<tr>	
+
+					<tr>
 				</thead>
 				<tbody>
 				@for(linea <- paginador.getList) {
@@ -36,7 +38,7 @@
 				</tbody>
 			</table>
 
-			<div class="pagination pull-right">		
+			<div class="pagination pull-right">
 			    @views.html.helpers.paginador(paginador, controllers.recupero.routes.RecuperoNotasCreditosController.index())
 			</div>
 	</div>
@@ -46,23 +48,23 @@ $( function(){
 	/**
 	 * Ventana de carga linea de productos en ordenes
 	 */
-	 
+
 	var contenedor = $("#listaLineaNotaCreditos");
 
 	contenedor.on('click', '#nuevoNotaCredito', function(){
 		urlContenidoModal = '/recupero/nota-credito-linea/crear?facturaId='+$('#recuperoFacturaId').val();
-							
+
 		mostrarModal(urlContenidoModal);
 		return false;
 	});
-	
+
 	contenedor.on('click', '.modificarNotaCredito', function(){
 		lineaParaEditar = $(this).closest('tr');
 		var modal = mostrarModal($(this).attr('href'));
-		modal.dialog('option', 'title', 'Editar producto');	
+		modal.dialog('option', 'title', 'Editar producto');
 		return false;
 	});
-	
+
 	contenedor.on('click', '.eliminarNotaCredito', function(){
 		var mensaje = "¿Confirma que desea eliminar el registro?";
 		if(confirm(mensaje)){
@@ -78,8 +80,8 @@ $( function(){
 		}
 		return false;
 	});
-	
-	
+
+
 	function mostrarModal(url){
 		modalCargaProductos = $('<div></div>').dialog({
 			resizable: false,
@@ -96,12 +98,12 @@ $( function(){
 		    	modalCargaProductos.dialog('destroy');
 			}
 		  });
-		
+
 		modalCargaProductos.on('click', '.cancelar', function(){
 			modalCargaProductos.dialog('destroy');
 			return false;
 		});
-		
+
 		modalCargaProductos.on('submit', function(e){
 			var href = $(e.target).attr('action');
 			var data = $(e.target).serialize();
@@ -120,12 +122,12 @@ $( function(){
 			});
 			return false;
 		});
-		
-		
+
+
 		return modalCargaProductos;
 	}
-	
-	
+
+
 	contenedor.find('form').on('submit', function(){
 		var url = $(this).attr("action");
 		var query = $(this).serialize();
