--- a/app/views/recupero/recuperoNotaCredito/indexRecuperoNotaCredito.scala.html
+++ b/app/views/recupero/recuperoNotaCredito/indexRecuperoNotaCredito.scala.html
@@ -1,4 +1,5 @@
 @(paginador:  utils.pagination.Pagination[models.recupero.RecuperoNotaCredito], editable: Boolean,rf:models.recupero.RecuperoFactura)
+@import models.auth._
 <div id="listaLineaNotaCreditos" class="contenedorPaginador ajaxPaginador">
 
 <div class="panel panel-default">
