--- a/app/views/recupero/recuperoNotaDebito/indexRecuperoNotaDebito.scala.html
+++ b/app/views/recupero/recuperoNotaDebito/indexRecuperoNotaDebito.scala.html
@@ -1,4 +1,5 @@
 @(paginador:  utils.pagination.Pagination[models.recupero.RecuperoNotaDebito], editable: Boolean,rf:models.recupero.RecuperoFactura)
+@import models.auth._
 <div id="listaLineaNotaDebitos" class="contenedorPaginador ajaxPaginador">
 
 <div class="panel panel-default">
