--- a/app/views/recupero/recuperoRecibo/editarRecibo.scala.html
+++ b/app/views/recupero/recuperoRecibo/editarRecibo.scala.html
@@ -3,8 +3,9 @@
 @implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
 @scripts = {
-
+	<script src="@routes.Assets.at("javascripts/recupero/recuperoFactura.js")" type="text/javascript"></script>
 }
+
 
 @views.html.recupero.mainRecupero("Modificar Recibo", scripts) {
 
