--- a/app/views/recupero/recuperoRecibo/crearRecibo.scala.html
+++ b/app/views/recupero/recuperoRecibo/crearRecibo.scala.html
@@ -2,7 +2,7 @@
 @import helper._
 
 @scripts = {
-
+	<script src="@routes.Assets.at("javascripts/recupero/recuperoFactura.js")" type="text/javascript"></script>
 }
 
 @views.html.recupero.mainRecupero("Crear Recibo", scripts) {
